Fix viewport height on mobile devices

--- a/src/weathermap/App.css
+++ b/src/weathermap/App.css
@@ -3,8 +3,8 @@
 }
 
 .leaflet-container {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
 }
 
 .datepickerInput {
