--- a/src/weathermap/index.css
+++ b/src/weathermap/index.css
@@ -18,7 +18,6 @@ body, html {
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 @media (prefers-color-scheme: light) {
